# agent

./: .gitignore  README.md  demo.py  pyproject.toml
src/agent/: __init__.py  core.py  providers.py
src/agent/tools/: __init__.py  base.py  calculator.py  flaky_api.py  search.py
tests/: test_agent.py
